--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 
   <div class="section">
     <h2>Formação Acadêmica</h2>
-    <p>Ensino superior em andamento<br>
-    Sistema de Informação (1º semestre) – Faculdade Santíssimo Sacramento</p>
+  </UL>
+<LI>Sistemas de informação <a href="https://fsssacramento.br/"> - F.SS.S.</a> - Atual (1° SEMESTRE)
+</UL>
   </div>
 
   <div class="section">
